; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_vfs.c_mac_devfs_label_associate_device.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_vfs.c_mac_devfs_label_associate_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.devnode = type { i32 }

@devfs_label_associate_device = common dso_local global i32 0, align 4
@mac_device_enforce = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mac_devfs_label_associate_device(i32 %0, %struct.devnode* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.devnode*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.devnode* %1, %struct.devnode** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* @devfs_label_associate_device, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.devnode*, %struct.devnode** %5, align 8
  %10 = load %struct.devnode*, %struct.devnode** %5, align 8
  %11 = getelementptr inbounds %struct.devnode, %struct.devnode* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @MAC_PERFORM(i32 %7, i32 %8, %struct.devnode* %9, i32 %12, i8* %13)
  ret void
}

declare dso_local i32 @MAC_PERFORM(i32, i32, %struct.devnode*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
